# palim

./: README.md  pyproject.toml  setup.py
palim/: hooks.py  modules.txt
