[build-system]
requires = ["setuptools>=68.1"]
build-backend = "setuptools.build_meta"

[project]
name = "palim"
version = "0.0.1"
description = "Customizações upgrade-safe do sistema de tickets Palim"
authors = [
    {name = "Palim Ltda", email = "suporte@palim.com.br"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
readme = "README.md"

[project.urls]
Homepage = "https://palim.com.br"

[tool.setuptools]
packages = ["palim"]
